lib/libui/chatwidget/snapshots/libui__chatwidget__tests__image_generation_call_history_snapshot.snap
---
source: lib/libui/chatwidget/tests.rs
expression: combined
---
• Generated Image:
  └ A tiny blue square
  └ Saved to: /tmp
