lib/libui/chatwidget/snapshots/libui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: lib/libui/chatwidget/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
