lib/libui/chatwidget/snapshots/libui__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: lib/libui/chatwidget/tests.rs
expression: snapshot
---
cells=1
■ Conversation interrupted - tell the model what to do differently.
