lib/libui/chatwidget/snapshots/libui__chatwidget__tests__interrupted_turn_error_message.snap
---
source: lib/libui/chatwidget/tests.rs
expression: last
---
■ Conversation interrupted - tell the model what to do differently.
