lib/libui/chatwidget/snapshots/libui__chatwidget__tests__interrupted_turn_pending_steers_message.snap
---
source: lib/libui/chatwidget/tests.rs
expression: info
---
• Model interrupted to submit steer instructions.
