lib/libui/chatwidget/snapshots/libui__chatwidget__tests__local_image_attachment_history_snapshot.snap
---
source: lib/libui/chatwidget/tests.rs
expression: combined
---
• Viewed Image
  └ example.png
