lib/libui/chatwidget/snapshots/libui__chatwidget__tests__permissions_selection_history_after_mode_switch.snap
---
source: lib/libui/chatwidget/tests.rs
expression: "lines_to_single_string(&cells[0])"
---
• Permissions updated to Full Access
